--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -221,6 +221,13 @@ body.dark-mode .alert-primary {
     transition: all 0.5s ease;
 }
 
+body.dark-mode .alert-secondary {
+    background-color: #161719 !important;
+    color: #a7acb1 !important;
+    border-color: #41464b !important;
+    transition: all 0.5s ease;
+}
+
 body.dark-mode .alert-success {
     background-color: #051b11;
     color: #75b798;
@@ -482,6 +489,10 @@ body.dark-mode .advisory {
 body.dark-mode .advisory a {
     font-size: 12px;
     color: #ea8e8e;
+}
+
+body.dark-mode .text-secondary {
+    color: #b1b1b1 !important;
 }
 
 /* ------------------------------------------ */
