2025-07 Feature Update for Version Next (5.0.0)

--- a/css/style.css
+++ b/css/style.css
@@ -2422,7 +2422,7 @@ h2.page-title {
     font-size: 16px;
     height: 40px;
     line-height: 1.5;
-    background-color: #8a8a73;
+    background-color: #eb6767;
     color: #fff;
     transition: background-color 0.3s ease, color 0.3s ease, background-image 0.3s ease;
 }
