--- a/css/style.css
+++ b/css/style.css
@@ -759,8 +759,9 @@ header {
 #hero {
     width: 100%;
     height: 100vh;
+    background: url("../img/bg-img/hero-bg.png") top right no-repeat;
+    background-size: cover;
     position: relative;
-    overflow: hidden;
 }
 
 
