--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -162,7 +162,7 @@ body.dark-mode .nav-item {
   }
 
 body.dark-mode .nav-item:hover {
-    color: #80a8cc;
+    color: #da8c08;
 }
 
 body.dark-mode .nav-item.active {
@@ -200,6 +200,8 @@ body.dark-mode #close-icon {
 body.dark-mode #check {
     display: none;
 }
+
+
 
 
 /* ---- */
@@ -339,7 +341,7 @@ body.dark-mode .about-me-summary {
 }
 
 body.dark-mode .about-me-summary:hover {
-    background-color: #52718d;
+    background-color: #7a5109;
 }
 
 body.dark-mode .about-me-area {
@@ -353,7 +355,7 @@ body.dark-mode .timeline-content {
 }
 
 body.dark-mode .timeline-content:hover {
-    background-color: #52718d;
+    background-color: #7a5109;
 }
 
 /* ------------------------------------------ */
@@ -463,7 +465,7 @@ body.dark-mode .timeline-item {
 }
 
 body.dark-mode .timeline-item:hover {
-    background-color: #52718d;
+    background-color: #7a5109;
 }
 
 /* ------------------------------------------ xx.x Portfolio Controls ------------------------------------------ */
@@ -556,3 +558,60 @@ body.dark-mode .wbnrfz_eicw {
     padding-top: 3em;
     padding-bottom: 2em;
 }
+
+/* ------------------------------------------ 3.0 OMSI/OpenBVE Page ------------------------------------------ */
+body.dark-mode .gs-guides {
+    background-color: #1e1e1e;
+    transition: all 0.5s ease;
+}
+
+body.dark-mode .accordion {
+    padding-bottom: 30px;
+}
+
+body.dark-mode .accordion-button {
+    background-color: #3a3b3c;
+    transition: all 0.5s ease;
+    color: #fff;
+    border: 1px solid #000;
+}
+
+body.dark-mode .accordion-item {
+    border: 0px solid #000;
+}
+
+body.dark-mode .accordion-body:not(.collapsed) {
+    background-color: #323232;
+    border: 1px solid #000;
+}
+
+body.dark-mode .accordion-button:not(.collapsed) {
+    background-color: #ffe2b0;
+    color: #000;
+}
+
+body.dark-mode .alert-danger {
+    background-color: #2c0b0e;
+    color: #EA868F;
+    border-color: #842029;
+    transition: all 0.5s ease;
+}
+
+body.dark-mode .alert-dismissible .btn-close {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23EA868F'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e") !important;
+}
+
+body.dark-mode .accordion-button::after {
+    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
+}
+
+body.dark-mode .accordion-button:not(.collapsed)::after {
+    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
+}
+
+body.dark-mode .accordion-button:not(.collapsed)::after {
+    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000000'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
+}
+
+
+
