2025-08 Feature Update for Version Next (5.0.0)

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -566,7 +566,7 @@ body.dark-mode .gs-guides {
 }
 
 body.dark-mode .accordion {
-    padding-bottom: 30px;
+    padding-bottom: 5em;
 }
 
 body.dark-mode .accordion-button {
