--- a/css/style.css
+++ b/css/style.css
@@ -2777,7 +2777,7 @@ h2.page-title {
 /* ------------------------------------------ 3.0 OMSI/OpenBVE Page ------------------------------------------ */
 
 .accordion {
-    padding-bottom: 30px;
+    padding-bottom: 5em;
 }
 
 .accord-img {
