--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -63,14 +63,14 @@ body.dark-mode .portfolio-filter .btn {
 
 
 /* ---- */
-body.dark-mode #hero {
+/* body.dark-mode #hero {
     width: 100%;
     height: 100vh;
     background: url("../img/bg-img/hero-bg-dark.png") top right no-repeat;
     background-size: cover;
     position: relative;
     transition: all 0.5s ease;
-}
+} */
 
 body.dark-mode #hero:before {
     content: "";
