--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -332,6 +332,7 @@ body.dark-mode .profile-desc {
 body.dark-mode .about-me-summ {
     background-color: #18191a;
     transition: all 0.5s ease;
+    padding-bottom: 5em;
 }
 
 body.dark-mode .about-me-summary {
@@ -617,4 +618,36 @@ body.dark-mode .accordion-button:not(.collapsed)::after {
     body.dark-mode #ops-smrtt {
         content: url(../img/core-img/stl-dark.png);
     }
+}
+
+body.dark-mode .about-me-stations {
+    background-color: #242526;
+    transition: all 0.5s ease;
+}
+
+body.dark-mode .info-table td.first {
+    border: 2px solid #242526;
+    background-color: #2f3132;
+    color: #fff;
+}
+
+body.dark-mode .info-table td.second {
+    border: 2px solid #242526;
+    background-color: #484a4b;
+    color: #fff;
+}
+
+body.dark-mode .alert-warning {
+    background-color: #332701;
+    color: #ffcc37;
+    border-color: #997404;
+    transition: all 0.5s ease;
+}
+
+body.dark-mode .alert-dismissible .cls-warning {
+     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffcc37'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e") !important;
+}
+
+body.dark-mode .alert-dismissible .btn-close {
+     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffcc37'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e") !important;
 }
