--- a/css/style.css
+++ b/css/style.css
@@ -1213,10 +1213,9 @@ h4.timeline-date-aa {
 .about-me-summ {
     background-color: #f8faf4;
     padding-top: 50px;
-    /* padding-bottom: 83px; */
+    padding-bottom: 5em;
     position: relative;
     z-index: 0;
-    /* Ensure it stays above background elements */
 }
 
 /* to rel */
@@ -2818,113 +2817,113 @@ h2.page-title {
 }
 
 .wbnrfz_details .details_catagory_wrap {
-  display: flex;
-  justify-content: space-between;
-  max-width: 1400px;
+    display: flex;
+    justify-content: space-between;
+    max-width: 1400px;
 }
 
 .wbnrfz_details .details_catagory_wrap .single_catagory .social_links a {
-  font-size: 16px;
-  color: #000;
-  margin-right: 10px;
+    font-size: 16px;
+    color: #000;
+    margin-right: 10px;
 }
 
 .wbnrfz_details .details_catagory_wrap .single_catagory .social_links a:hover {
-  color: #80a8cc;
+    color: #80a8cc;
 }
 
 .wbnrfz_details .details_catagory_wrap .single_catagory {
-  margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 .wbnrfz_details .details_catagory_wrap .single_catagory h4 {
-  font-size: 16px;
-  color: #000;
-  font-weight: 400;
+    font-size: 16px;
+    color: #000;
+    font-weight: 400;
 }
 
 .wbnrfz_details .details_catagory_wrap .single_catagory span {
-  font-size: 12px;
-  color: #828793;
-  font-weight: 400;
-  font-family: "Roboto", sans-serif;
-  display: block;
-  margin-bottom: 6px;
-  cursor: default;
+    font-size: 12px;
+    color: #828793;
+    font-weight: 400;
+    font-family: "Roboto", sans-serif;
+    display: block;
+    margin-bottom: 6px;
+    cursor: default;
 }
 
 .wbnrfz_details .banner {
-  margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 .wbnrfz_details .details_info {
-  margin-bottom: 20px;
-  text-align: justify;
+    margin-bottom: 20px;
+    text-align: justify;
 }
 
 .wbnrfz_details h1 {
-  font-size: clamp(34px, 8.5vw, 40px) !important;
-  margin-bottom: 50px;
-  font-weight: bold;
+    font-size: clamp(34px, 8.5vw, 40px) !important;
+    margin-bottom: 50px;
+    font-weight: bold;
 }
 
 .wbnrfz_btn {
-  position: relative;
-  z-index: 1;
-  min-width: auto;
-  height: 46px;
-  line-height: 42px;
-  font-size: 14px;
-  font-weight: 500;
-  display: inline-block;
-  padding: 0 30px;
-  text-align: center;
-  text-transform: capitalize;
-  background-color: #e96060;
-  color: #fff;
-  border-radius: 60px;
-  transition-duration: 500ms;
-  margin-bottom: 20px;
-  margin-top: 5px;
+    position: relative;
+    z-index: 1;
+    min-width: auto;
+    height: 46px;
+    line-height: 42px;
+    font-size: 14px;
+    font-weight: 500;
+    display: inline-block;
+    padding: 0 30px;
+    text-align: center;
+    text-transform: capitalize;
+    background-color: #e96060;
+    color: #fff;
+    border-radius: 60px;
+    transition-duration: 500ms;
+    margin-bottom: 20px;
+    margin-top: 5px;
 }
 
 .wbnrfz_details .col-lg-6,
 .wbnrfz_details .col-lg-4 {
-  padding-top: 25px;
+    padding-top: 25px;
 }
 
 .section-padding-80-0 {
-  padding-top: 80px;
-  padding-bottom: 80px;
-  background-color: #e9eae5;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    background-color: #e9eae5;
 }
 
 .row-line-diag {
-  padding-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 .ld-s-title {
-  font-size: 30px;
-  font-weight: bolder;
-  padding-bottom: 30px;
+    font-size: 30px;
+    font-weight: bolder;
+    padding-bottom: 30px;
 }
 
 .logo-operator {
-  width: 120px;
+    width: 120px;
 }
 
 .about-me-stations {
     -webkit-transition-duration: 800ms;
     -o-transition-duration: 800ms;
     transition-duration: 800ms;
-    background-color: #f5f6f2;
+    background-color: #e9eae5;
     padding: 35px 26px 13px;
-    border-radius: 10px;
+    border-radius: 25px;
     position: relative;
     z-index: 1;
     margin-top: 50px;
-    margin-left: 7em;
-    margin-right: 7em;
+    margin-left: 15em;
+    margin-right: 15em;
 }
 
 .info-table td.first {
@@ -2936,70 +2935,87 @@ h2.page-title {
 
 /*  */
 h4.stn {
-  width: 160px;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 24px;
-  letter-spacing: 0.32px;
-  word-wrap: break-word;
-  cursor: default;
+    width: 160px;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+    word-wrap: break-word;
+    cursor: default;
 }
 
 h4.stn:hover {
-  color: #ffb6b9;
-  transition-duration: 500ms;
-  cursor: pointer;
+    color: #ffb6b9;
+    transition-duration: 500ms;
+    cursor: pointer;
 }
 
 
 .station-pill-round {
-  width: fit-content;
-  height: fit-content;
-  padding: 4px 8px;
-  font-size: 12px;
-  text-align: center;
-  font-weight: 700;
-  line-height: 16px;
-  letter-spacing: 0.24px;
+    width: fit-content;
+    height: fit-content;
+    padding: 4px 8px;
+    font-size: 12px;
+    text-align: center;
+    font-weight: 700;
+    line-height: 16px;
+    letter-spacing: 0.24px;
 }
 
 .station-pill-round-single {
-  width: fit-content;
-  height: fit-content;
-  border-radius: 9px;
-  padding: 4px 8px;
-  font-size: 12px;
-  text-align: center;
-  font-weight: 700;
-  line-height: 16px;
-  letter-spacing: 0.24px;
-  cursor: default;
+    width: fit-content;
+    height: fit-content;
+    border-radius: 9px;
+    padding: 4px 8px;
+    font-size: 12px;
+    text-align: center;
+    font-weight: 700;
+    line-height: 16px;
+    letter-spacing: 0.24px;
+    cursor: default;
 }
 
 .station-pill-round:first-child {
-  border-top-left-radius: 9px;
-  border-bottom-left-radius: 9px;
-  cursor: default;
+    border-top-left-radius: 9px;
+    border-bottom-left-radius: 9px;
+    cursor: default;
 }
 
 .station-pill-round:last-child {
-  border-top-right-radius: 9px;
-  border-bottom-right-radius: 9px;
-  cursor: default;
+    border-top-right-radius: 9px;
+    border-bottom-right-radius: 9px;
+    cursor: default;
 }
 
 .stationBlockChildItem {
-  display: flex;
-  flex-direction: row;
-  padding-bottom: 25px;
-  cursor: default;
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 25px;
+    cursor: default;
 }
 
 .stationBlockItem {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(270px, 334px));
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(270px, 335px));
 }
 
 .line-strip {
-  margin-right: 5px;
+    margin-right: 5px;
+}
+
+.info-table td.second {
+    width: 40%;
+    border: 2px solid #b3b3b3;
+    background-color: #f5f6f2;
+    text-align: left;
+}
+
+#ops-smrtt {
+    width: 180px;
+    height: auto;
+}
+
+.accordion-body .changelog {
+    font-size: 16px;
+    text-align: left;
 }
