--- a/css/style.css
+++ b/css/style.css
@@ -3010,7 +3010,8 @@ h4.stn:hover {
     text-align: left;
 }
 
-#ops-smrtt {
+#ops-smrtt,
+#ops-smrtb {
     width: 180px;
     height: auto;
 }
@@ -3018,4 +3019,32 @@ h4.stn:hover {
 .accordion-body .changelog {
     font-size: 16px;
     text-align: left;
+}
+
+.info-table th.first {
+    font-weight: bold;
+    border: 2px solid #b3b3b3;
+    width: 20%;
+    background-color: #b1b1b1;
+    text-align: center;
+}
+
+.info-table th.second {
+    font-weight: bold;
+    border: 2px solid #b3b3b3;
+    width: 20%;
+    background-color: #b1b1b1;
+    text-align: center;
+}
+
+.info-table th {
+    border: 2px solid #b3b3b3;
+    color: #000;
+    font-weight: bold;
+}
+
+.accordion-button:not(.collapsed) {
+    color: #000;
+    background-color: #ffe2b0;
+    box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
 }
