--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -62,15 +62,10 @@ body.dark-mode .portfolio-filter .btn {
 }
 
 
-/* ---- */
-/* body.dark-mode #hero {
-    width: 100%;
-    height: 100vh;
-    background: url("../img/bg-img/hero-bg-dark.png") top right no-repeat;
-    background-size: cover;
-    position: relative;
+body.dark-mode {
+    background-color: #18191a;
     transition: all 0.5s ease;
-} */
+}
 
 body.dark-mode #hero:before {
     content: "";
@@ -586,10 +581,11 @@ body.dark-mode .accordion-body:not(.collapsed) {
     border: 1px solid #000;
 }
 
-body.dark-mode .accordion-button:not(.collapsed) {
+body.dark-mode .accordion-button:not(.collapsed){
     background-color: #ffe2b0;
     color: #000;
 }
+
 
 body.dark-mode .alert-danger {
     background-color: #2c0b0e;
@@ -597,6 +593,8 @@ body.dark-mode .alert-danger {
     border-color: #842029;
     transition: all 0.5s ease;
 }
+
+
 
 body.dark-mode .alert-dismissible .btn-close {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23EA868F'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e") !important;
@@ -671,4 +669,156 @@ body.dark-mode .info-table th.first, body.dark-mode .info-table th.second {
     border: 2px solid #242526;
     background-color: #b1b1b1;
     color: #000;
+}
+
+/* ------------------------------------------ 6.0 Fleets Pages ------------------------------------------ */
+body.dark-mode #manufacturerFilter,
+body.dark-mode #categoryFilter {
+    background-color: #2e2e2e;
+    color: #fff;
+}
+
+.search-input {
+    height: 50px;
+    border-radius: 30px;
+    padding-left: 35px;
+    border: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    color: #fff;
+    width: 30%;
+}
+
+body.dark-mode .search-input::placeholder {
+    color: #fff;
+}
+
+body.dark-mode .fleet-table th {
+    font-weight: bold;
+    width: 9%;
+    border: 2px solid #242526;
+    background-color: #b1b1b1;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+body.dark-mode .fleet-table .manu {
+    font-weight: bold;
+    text-align: center;
+    background-color: transparent;
+    border: 2px solid #242526;
+    color: #fff;
+    vertical-align: top;
+}
+
+body.dark-mode .fleet-table .model {
+    font-weight: bold;
+    text-align: center;
+    width: 15%;
+    background-color: transparent;
+    border: 2px solid #242526;
+    color: #fff;
+    vertical-align: top;
+}
+
+body.dark-mode .fleet-table .type {
+    font-weight: bold;
+    text-align: center;
+    background-color: transparent;
+    border: 2px solid #242526;
+    color: #fff;
+    vertical-align: top;
+    width: 15%;
+}
+
+body.dark-mode .fleet-table .cat {
+    font-weight: bold;
+    text-align: center;
+    background-color: transparent;
+    border: 2px solid #242526;
+    color: #fff;
+    vertical-align: top;
+}
+
+body.dark-mode .fleet-table .dev {
+    font-weight: bold;
+    text-align: center;
+    background-color: transparent;
+    border: 2px solid #242526;
+    color: #fff;
+    vertical-align: top;
+    width: 15%;
+}
+
+body.dark-mode .fleet-table .disp {
+    font-weight: bold;
+    text-align: center;
+    background-color: transparent;
+    border: 2px solid #242526;
+    color: #fff;
+    vertical-align: top;
+}
+
+body.dark-mode .fleet-table .livery {
+    font-weight: bold;
+    text-align: center;
+    background-color: transparent;
+    border: 2px solid #242526;
+    color: #fff;
+    vertical-align: top;
+    width: 9%;
+}
+
+body.dark-mode .fleet-table .rego {
+    font-weight: bold;
+    text-align: center;
+    width: 40%;
+    background-color: transparent;
+    border: 2px solid #242526;
+    color: #fff;
+}
+
+body.dark-mode .fleet-table tbody tr:nth-child(odd) {
+    background-color: #2f3132;
+    /* Darker gray for dark mode */
+    border: 2px solid #242526;
+}
+
+body.dark-mode .fleet-table tbody tr:nth-child(even) {
+    background-color: #3a3b3c;
+    /* Slightly lighter gray for dark mode */
+    border: 2px solid #242526;
+}
+
+body.dark-mode .tab-content {
+    padding-top: 20px;
+}
+
+body.dark-mode .nav-tabs {
+    border-bottom: none !important;
+    border-radius: 20px !important;
+}
+
+body.dark-mode .nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+    background-color: #6ac144 !important;
+    border: none;
+    border-radius: 20px !important;
+}
+
+body.dark-mode .nav-tabs .nav-link {
+    color: #fff !important;
+    border: none;
+    border-radius: 20px !important;
+}
+
+body.dark-mode .nav-tabs .nav-link:hover {
+    background-color: #ffb6b9 !important;
+    color: #000 !important;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    border-radius: 20px !important;
+}
+
+body.dark-mode .nav-tabs .nav-link.active {
+    color: #000 !important;
 }
