--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -508,11 +508,44 @@
         text-align: center;
     }
 
-    .nav-tabs .nav-item.show .nav-link,
-    .nav-tabs .nav-link.active {
-        background-color: #6ac144 !important;
-        border: none;
-        border-radius: 20px !important;
+        .fleet-table th,
+    .fleet-table td {
+        white-space: nowrap;
+    }
+
+    .filter-inputs {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .filter-inputs .search-input {
+        width: 66%;
+    }
+
+    .fleet-table th,
+    .fleet-table .manu,
+    .fleet-table .model,
+    .fleet-table .type,
+    .fleet-table .cat,
+    .fleet-table .dev,
+    .fleet-table .disp,
+    .fleet-table .livery,
+    .fleet-table .rego {
+        font-size: 14px;
+    }
+
+    body.dark-mode .fleet-table th,
+    body.dark-mode .fleet-table td {
+        white-space: nowrap;
+    }
+
+    body.dark-mode .filter-inputs {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    body.dark-mode .filter-inputs .search-input {
+        width: 66%;
     }
 
 }
