--- a/css/style.css
+++ b/css/style.css
@@ -2490,7 +2490,7 @@ select:focus {
 }
 
 .wbnrfz_details_blog {
-    background: #ffffffe0;
+    background: #f5f5f5;
     box-shadow: 0 4px 30px #0000001a;
     backdrop-filter: blur(10px);
     margin-top: -4.2em;
@@ -2659,7 +2659,7 @@ h2.page-title {
 }
 
 .wbnrfz_eicw {
-    background: #e9eae5;
+    background: #f5f5f5;
     backdrop-filter: blur(10px);
     padding-top: 3em;
     padding-bottom: 2em;
@@ -2799,4 +2799,85 @@ md-menu {
 .form-control::placeholder {
   color: #aaaaaa; /* Red color example */
   opacity: 1; /* Ensure full opacity if desired, as some browsers default to lower opacity */
+}
+
+
+
+
+
+.wrapper {
+  padding: 25px;
+  position: relative;
+  overflow-x: hidden;
+  max-width: 1200px;
+  border-radius: 13px;
+}
+.wrapper .icon {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 120px;
+  display: flex;
+  align-items: center;
+}
+.icon:first-child {
+  left: 0;
+  display: none;
+  background: linear-gradient(90deg, #f5f5f5 70%, transparent);
+}
+.icon:last-child {
+  right: 0;
+  justify-content: flex-end;
+  background: linear-gradient(-90deg, #f5f5f5 70%, transparent);
+}
+
+.icon i {
+  width: 55px;
+  height: 55px;
+  cursor: pointer;
+  font-size: 1.2rem;
+  text-align: center;
+  line-height: 55px;
+  border-radius: 50%;
+}
+.icon i:hover {
+  background: #efedfb;
+}
+.icon:first-child i {
+  margin-left: 15px;
+} 
+.icon:last-child i {
+  margin-right: 15px;
+} 
+.wrapper .tabs-box {
+  display: flex;
+  gap: 12px;
+  list-style: none;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+.tabs-box.dragging {
+  scroll-behavior: auto;
+  cursor: grab;
+}
+.tabs-box .tab {
+  cursor: pointer;
+  font-size: 1.18rem;
+  white-space: nowrap;
+  background: #f5f4fd;
+  padding: 13px 20px;
+  border-radius: 30px;
+  border: 1px solid #d8d5f2;
+}
+.tabs-box .tab:hover{
+  background: #efedfb;
+}
+.tabs-box.dragging .tab {
+  user-select: none;
+  pointer-events: none;
+}
+.tabs-box .tab.active{
+  color: #fff;
+  background: #5372F0;
+  border-color: transparent;
 }
