--- a/css/style.css
+++ b/css/style.css
@@ -2809,65 +2809,42 @@ md-menu {
   padding: 25px;
   position: relative;
   overflow-x: hidden;
-  max-width: 1200px;
-  border-radius: 13px;
-}
-.wrapper .icon {
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 120px;
-  display: flex;
-  align-items: center;
-}
-.icon:first-child {
-  left: 0;
-  display: none;
-  background: linear-gradient(90deg, #f5f5f5 70%, transparent);
-}
-.icon:last-child {
-  right: 0;
-  justify-content: flex-end;
-  background: linear-gradient(-90deg, #f5f5f5 70%, transparent);
+  max-width: 1400px;
+  border-radius: 25px;
+  background: #dddddd;
 }
 
-.icon i {
-  width: 55px;
-  height: 55px;
-  cursor: pointer;
-  font-size: 1.2rem;
-  text-align: center;
-  line-height: 55px;
-  border-radius: 50%;
-}
-.icon i:hover {
-  background: #efedfb;
-}
-.icon:first-child i {
-  margin-left: 15px;
-} 
-.icon:last-child i {
-  margin-right: 15px;
-} 
+
+
 .wrapper .tabs-box {
   display: flex;
-  gap: 12px;
+  gap: 15px;
   list-style: none;
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
 .tabs-box.dragging {
-  scroll-behavior: auto;
-  cursor: grab;
+    scroll-behavior: auto;
+    cursor: grab;
+    touch-action: pan-x; /* Allow horizontal dragging */
 }
+
+.tabs-box.dragging:active {
+    cursor: grabbing;
+}
+
 .tabs-box .tab {
   cursor: pointer;
-  font-size: 1.18rem;
+  font-size: 15px;
   white-space: nowrap;
-  background: #f5f4fd;
+  overflow: hidden;
+  text-overflow: ellipsis; /* Add ellipsis for overflowing text */
+  background: #98997f;
+  color: #fff;
   padding: 13px 20px;
   border-radius: 30px;
   border: 1px solid #d8d5f2;
+  width: 400px;
 }
 .tabs-box .tab:hover{
   background: #efedfb;
@@ -2878,6 +2855,6 @@ md-menu {
 }
 .tabs-box .tab.active{
   color: #fff;
-  background: #5372F0;
+  background: #6d99c0;
   border-color: transparent;
 }
